update to training cluster

--- a/chemberta3/benchmarking/training-cluster-config.yaml
+++ b/chemberta3/benchmarking/training-cluster-config.yaml
@@ -10,10 +10,10 @@ max_workers: 6
 
 available_node_types:
     ray_head_default:
-        resources: {"CPU": 2, "GPU": 0}
+        resources: {"CPU": 4, "GPU": 1}
         node_config:
-            InstanceType: t3.medium
-            ImageId: ami-05ed4efe67871f0ef
+            InstanceType: g4dn.xlarge
+            ImageId: ami-0049f8d04dcd032ce 
             IamInstanceProfile:
                 Arn: "arn:aws:iam::979726621414:instance-profile/dc_ray_head_node_profile"
             BlockDeviceMappings:
@@ -24,7 +24,7 @@ available_node_types:
         resources: {"CPU": 4, "GPU": 1}
         node_config:
             InstanceType: g4dn.xlarge
-            ImageId: ami-014cf1a8ad95b0b43
+            ImageId: ami-0049f8d04dcd032ce 
             IamInstanceProfile:
                 Arn: "arn:aws:iam::979726621414:instance-profile/DcSpotInstanceProfile20240222102159801000000002"
             InstanceMarketOptions:
@@ -37,7 +37,7 @@ available_node_types:
         node_config:
             InstanceType: g3.8xlarge
             # The below is a custom AMI id for deep learning containing deechem, torch with cuda 12.1, ray installed for instance with multiple nodes.
-            ImageId: ami-02529bbd8804f4908
+            ImageId: ami-0049f8d04dcd032ce 
             IamInstanceProfile:
                 Arn: "arn:aws:iam::979726621414:instance-profile/DcSpotInstanceProfile20240222102159801000000002"
             # To query spot price: aws ec2 describe-spot-price-history --instance-types g3.8xlarge --availability-zone us-east-2a --product-description "Linux/UNIX"
