fix train config

--- a/chemberta3/cluster/train-cluster-config.yml
+++ b/chemberta3/cluster/train-cluster-config.yml
@@ -3,7 +3,7 @@ cluster_name: dc-ray
 provider:
     type: aws
     region: us-east-2
-    availability_zone: us-east-2a,us-east-2c,us-east-2b # can replace with the availability zones of your choice
+    availability_zone: us-east-2b # can replace with the availability zones of your choice
     security_group:
         GroupName: RayCluster # change GroupName as needed
         IpPermissions:
@@ -24,7 +24,7 @@ max_workers: 20
 
 available_node_types:
     ray_head_default:
-        resources: {"CPU": 1, "GPU": 0}
+        resources: {"CPU": 0, "GPU": 0}
         node_config:
             InstanceType: t3.large
             ImageId: ami-xxx  # replace xxx with a valid AWS image id 
@@ -45,10 +45,11 @@ available_node_types:
             InstanceMarketOptions:
                 MarketType: spot
                 SpotOptions:
-                    MaxPrice: "0.25"
+                    MaxPrice: "0.1"
+        min_workers: 0
         max_workers: 10
 
-    two_gpu_instance:
+    four_gpu_instance:
         resources: {"CPU": 48, "GPU": 4}
         node_config:
             InstanceType: g4dn.12xlarge
@@ -56,11 +57,9 @@ available_node_types:
             ImageId: ami-xxx  # replace xxx with a valid AWS image id 
             IamInstanceProfile:
                 Arn: "arn:aws:iam::xxx" # replace xxx with a valid IAM instance profile
-            # To query spot price: aws ec2 describe-spot-price-history --instance-types g3.8xlarge --availability-zone us-east-2a --product-description "Linux/UNIX"
+            # To query spot price: aws ec2 describe-spot-price-history --instance-types g4dn.12xlarge --availability-zone us-east-2b --product-description "Linux/UNIX"
             InstanceMarketOptions:
                 MarketType: spot
-                SpotOptions:
-                    MaxPrice: "1"
         max_workers: 20
 
 # un-comment below lines if V100 GPUs are needed.
@@ -74,8 +73,6 @@ available_node_types:
 #               Arn: "arn:aws:iam::979726621414:instance-profile/prithvi_ray_cluster_profile"
 #           InstanceMarketOptions:
 #               MarketType: spot
-#               SpotOptions:
-#                   MaxPrice: "0.1"
 #       max_workers: 20
 
 head_node_type: ray_head_default
