feat: add support for loading additional datasets (antimalarial, cocrystal, covid19, adme, astrazeneca)

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ torch-geometric
 dgllife
 transformers
 tokenizers
+datasets
 # select backend for torch (cuda, rocm)
 --extra-index-url https://download.pytorch.org/whl/cpu 
 torch
